--- a/groceries/package.json
+++ b/groceries/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "cra": "ionic capacitor run android"
   },
   "private": true,
   "dependencies": {
@@ -19,11 +20,14 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@awesome-cordova-plugins/core": "^6.2.0",
+    "@capacitor/android": "4.4.0",
     "@capacitor/app": "4.1.0",
     "@capacitor/core": "4.4.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@ionic-native/social-sharing": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "ionicons": "^6.0.3",
